# Meeting-Minutes-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  GMAIL_SETUP.md  PORT_CONFIGURATION.md  README.md  fix_gmail_credentials.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_crew_llm.py  test_gmail_auth.py  test_llm_connection.py  test_local_llm.py
.github/workflows/: ci.yml
src/meeting_minutes/: __init__.py  main.py
src/meeting_minutes/config/: __init__.py  app_config.py
src/meeting_minutes/crews/gmailcrew/: gmailcrew.py
src/meeting_minutes/crews/gmailcrew/tools/: gmail_tool.py  gmail_utility.py
src/meeting_minutes/crews/meeting_minutes_crew/: meeting_minutes_crew.py
src/meeting_minutes/crews/meeting_minutes_crew/config/: tasks.yaml
src/meeting_minutes/tools/: custom_tool.py
src/meeting_minutes/utils/: __init__.py  audio_processor.py  crewai_local_wrapper.py  llm_agent_factory.py  llm_config.py  logger.py  monkey_patches.py  skip_validation_wrapper.py
tests/: __init__.py  conftest.py  test_crew_integration.py  test_gmail_auth.py  test_llm_connection.py
